# kubeflow_pipeline

./: ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-test.txt  setup.py
.github/: rename_project.sh
.github/workflows/: hello_world.yml  main.yml  nuscene.yml  pipeline.yml  release.yml
ajperry_pipeline/: main.py  utils.py
ajperry_pipeline/components/: nuscenes.py
ajperry_pipeline/ml/: __init__.py
ajperry_pipeline/ml/data/: __init__.py  reddit.py
ajperry_pipeline/ml/models/: transformer.py
ajperry_pipeline/ml/models/blocks/: encoder_decoder_attention.py
ajperry_pipeline/ml/utils/: __init__.py  reddit.py
ajperry_pipeline/pipelines/: __init__.py  hello.py
kubeflow_pipeline/: __init__.py  base.py  components.py  main.py  pipeline.py  utils.py
kubeflow_pipeline/components/: __init__.py  hello_world.py
kubeflow_pipeline/components/hello_world/: __init__.py  hello_world.py
kubeflow_pipeline/components/nuscenes/: __init__.py  download_nuscene.py
kubeflow_pipeline/pipelines/: __init__.py
kubeflow_pipeline/pipelines/hello_world/: hello_world.py
kubeflow_pipeline/pipelines/nuscenes/: download_nuscene.py
notebooks/: model.ipynb  pipeline_management.ipynb  reddit_pipeline.ipynb  training.ipynb
tests/: test_base.py  test_client.py  test_launch_nuscenes.py  test_launch_pipeline.py
