[tool.poetry]
name = "ajperry-pipeline"
version = "0.1.1"
description = ""
authors = ["Alan Perry <alan.jacob.perry@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
ajperry-pipeline = "ajperry_pipeline.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.15.1"
black = "^24.10.0"
ruff = "^0.8.6"
kfp = ">=2.0.0,<3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project.optional-dependencies]
test = ["pytest"]